[package]
name = "hat-mibcs"
version = "0.3.0"
authors = ["Dennis Møllegaard Pedersen <dennis@moellegaard.dk>"]
edition = "2018"

[dependencies]
btlepasvscan = { path = "../btlepasvscan" }
enum_primitive = "0.1.1"
signal-hook = "0.1.9"
structopt = "0.2.10"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
dbus = "0.6.4"
byteorder = "1.3.2"
