[package]
name = "hat-miflora"
version = "0.3.1"
authors = ["Dennis Møllegaard Pedersen <dennis@moellegaard.dk>"]
edition = "2018"

[dependencies]
blurz = "0.4.0"
byteorder = "1.3.2"
hex = "0.3.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
