[package]
name = "hat-miflora"
version = "0.4.0"
authors = ["Dennis Møllegaard Pedersen <dennis@moellegaard.dk>"]
edition = "2018"

[dependencies]
dbus = "0.6.4"
log = "0.4.0"
env_logger = "0.7.1"
dbus-common = { path = "../dbus-common" }
byteorder = "1.3.2"
structopt = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }